--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -12,21 +12,25 @@
     "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/shared": "workspace:*",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.24",
     "@types/react": "^18.2.61",
     "@types/react-dom": "^18.2.19",
-    "eslint": "^8.57.0",
-    "typescript": "^5.3.3",
     "autoprefixer": "10.4.18",
-    "eslint-config-next": "14.1.3"
+    "eslint": "^8.57.0",
+    "eslint-config-next": "14.1.3",
+    "typescript": "^5.3.3"
   },
   "dependencies": {
+    "@prisma/client": "5.11.0",
+    "@repo/tgd-database": "workspace:*",
     "next": "^14.1.3",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-toastify": "^10.0.4",
-    "tailwindcss": "3.4.1"
+    "tailwindcss": "3.4.1",
+    "use-debounce": "^10.0.0"
   }
 }
