--- a/apps/admin/tsconfig.json
+++ b/apps/admin/tsconfig.json
@@ -5,7 +5,11 @@
       {
         "name": "next"
       }
-    ]
+    ],
+    "paths": {
+      "@/*": ["./*"],
+      "@components": [ "./app/components" ]
+    }
   },
   "include": [
     "next-env.d.ts",
