--- a/turbo.json
+++ b/turbo.json
@@ -2,7 +2,8 @@
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
   "globalEnv": [
-    "NEXT_PUBLIC_URL"
+    "NEXT_PUBLIC_URL",
+    "NODE_ENV"
   ],
   "pipeline": {
     "build": {
@@ -15,6 +16,12 @@
     "dev": {
       "cache": false,
       "persistent": true
+    },
+    "db:generate": {
+      "cache": false
+    },
+    "db:push": {
+      "cache": false
     }
   }
 }
