--- a/turbo.json
+++ b/turbo.json
@@ -1,27 +1,24 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": [
-    "NEXT_PUBLIC_URL",
-    "NODE_ENV"
-  ],
+  "globalEnv": ["NEXT_PUBLIC_URL", "NODE_ENV"],
   "pipeline": {
-    "dev": {
-      "cache": false,
-      "persistent": true
-    },
     "db:generate": {
       "cache": false
     },
     "db:push": {
       "cache": false
     },
-    "lint": {
-      "dependsOn": ["^lint"]
-    },
     "build": {
       "dependsOn": ["^build"],
       "outputs": [".next/**", "!.next/cache/**"]
+    },
+    "lint": {
+      "dependsOn": ["^lint"]
+    },
+    "dev": {
+      "cache": false,
+      "persistent": true
     }
   }
 }
