fix that will work

--- a/turbo.json
+++ b/turbo.json
@@ -10,7 +10,7 @@
       "cache": false
     },
     "build": {
-      "dependsOn": ["^build"],
+      "dependsOn": ["^build", "db:generate"],
       "outputs": [".next/**", "!.next/cache/**"]
     },
     "lint": {
