--- a/turbo.json
+++ b/turbo.json
@@ -1,7 +1,7 @@
 {
   "$schema": "https://turbo.build/schema.json",
   "globalDependencies": ["**/.env.*local"],
-  "globalEnv": ["NEXT_PUBLIC_URL", "NODE_ENV"],
+  "globalEnv": ["NEXT_PUBLIC_VERCEL_URL", "NODE_ENV"],
   "pipeline": {
     "db:generate": {
       "cache": false
