--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,8 +11,8 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.1.1",
     "@repo/eslint-config": "workspace:*",
-    "@repo/typescript-config": "workspace:*",
     "@repo/shared": "workspace:*",
+    "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.5",
     "@types/node": "^20.11.27",
     "@types/react": "^18.2.61",
@@ -25,10 +25,12 @@
   "dependencies": {
     "@prisma/client": "5.11.0",
     "@repo/tgd-database": "workspace:*",
+    "@repo/board-game-geek-shared": "workspace:*",
     "next": "^14.1.3",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.51.0",
     "react-toastify": "^10.0.4",
     "tailwindcss": "3.4.1",
     "use-debounce": "^10.0.0"
