--- a/packages/board-game-geek-shared/tsconfig.json
+++ b/packages/board-game-geek-shared/tsconfig.json
@@ -1,9 +1,9 @@
 {
-  "extends": "typescript-config/base.json",
+  "extends": "@repo/typescript-config/base.json",
   "include": ["**/*.ts", "**/*.tsx"],
   "exclude": ["node_modules"],
   "compilerOptions": {
-    "allowImportingTsExtensions": true,
+    "allowSyntheticDefaultImports": true,
     "paths": {
       "@*": ["./src/*"]
     }
