--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -24,13 +24,15 @@
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
-    "@repo/tgd-database": "workspace:*",
     "@repo/board-game-geek-shared": "workspace:*",
+    "@repo/tgd-database": "workspace:*",
+    "@tanstack/react-table": "^8.13.2",
     "next": "^14.1.3",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.51.0",
+    "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "tailwindcss": "3.4.1",
     "use-debounce": "^10.0.0"
