--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -35,6 +35,7 @@
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.4",
     "tailwindcss": "3.4.1",
+    "ts-luxon": "^4.5.2",
     "use-debounce": "^10.0.0"
   }
 }
