--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -27,6 +27,7 @@
     "@repo/board-game-geek-shared": "workspace:*",
     "@repo/tgd-database": "workspace:*",
     "@tanstack/react-table": "^8.13.2",
+    "csv-parse": "^5.5.5",
     "next": "^14.1.3",
     "postcss": "8.4.35",
     "react": "^18.2.0",
@@ -36,6 +37,7 @@
     "react-toastify": "^10.0.5",
     "tailwindcss": "3.4.1",
     "ts-luxon": "^4.5.2",
-    "use-debounce": "^10.0.0"
+    "use-debounce": "^10.0.0",
+    "xml-js": "^1.6.11"
   }
 }
