--- a/packages/tgd-database/package.json
+++ b/packages/tgd-database/package.json
@@ -8,6 +8,7 @@
     "@repo/typescript-config": "workspace:*",
     "boardgamegeekclient": "1.9.1",
     "he": "^1.2.0",
+    "ts-luxon": "^4.5.2",
     "ts-node": "10.9.2"
   },
   "devDependencies": {
