--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -32,6 +32,7 @@
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.51.1",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5",
