--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -39,6 +39,7 @@
     "tailwindcss": "3.4.1",
     "ts-luxon": "^4.5.2",
     "use-debounce": "^10.0.0",
+    "use-sound": "^4.0.1",
     "xml-js": "^1.6.11"
   }
 }
