--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,7 +15,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.6",
     "@types/node": "^20.11.30",
-    "@types/react": "^18.2.70",
+    "@types/react": "^18.2.71",
     "@types/react-dom": "^18.2.22",
     "autoprefixer": "10.4.18",
     "eslint": "^8.57.0",
@@ -41,6 +41,7 @@
     "ts-luxon": "^4.5.2",
     "use-debounce": "^10.0.0",
     "use-sound": "^4.0.1",
+    "uuid": "^9.0.1",
     "xml-js": "^1.6.11"
   }
 }
