--- a/packages/shared/package.json
+++ b/packages/shared/package.json
@@ -10,6 +10,7 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
+    "@repo/board-game-geek-shared": "workspace:*",
     "@turbo/gen": "^1.11.3",
     "@types/node": "^20.11.30",
     "eslint": "^8.56.0",
