--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,37 +9,38 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.1.1",
+    "@next/eslint-plugin-next": "^14.1.4",
     "@repo/eslint-config": "workspace:*",
     "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^8.56.6",
     "@types/node": "^20.11.30",
-    "@types/react": "^18.2.67",
-    "@types/react-dom": "^18.2.19",
+    "@types/react": "^18.2.72",
+    "@types/react-dom": "^18.2.22",
     "autoprefixer": "10.4.18",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.3",
-    "typescript": "^5.4.2"
+    "typescript": "^5.4.3"
   },
   "dependencies": {
     "@prisma/client": "5.11.0",
     "@repo/board-game-geek-shared": "workspace:*",
     "@repo/tgd-database": "workspace:*",
-    "@tanstack/react-table": "^8.13.2",
+    "@tanstack/react-table": "^8.15.0",
     "csv-parse": "^5.5.5",
     "next": "^14.1.4",
     "postcss": "8.4.35",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.1",
+    "react-hook-form": "^7.51.2",
     "react-icons": "^5.0.1",
     "react-toastify": "^10.0.5",
     "tailwindcss": "3.4.1",
     "ts-luxon": "^4.5.2",
     "use-debounce": "^10.0.0",
     "use-sound": "^4.0.1",
+    "uuid": "^9.0.1",
     "xml-js": "^1.6.11"
   }
 }
