Remove pipeline for tasks (new vercel)

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,7 @@
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
     "NODE_ENV"
   ],
-  "pipeline": {
+  "tasks": {
     "db:generate": {
       "cache": false
     },
