--- a/package.json
+++ b/package.json
@@ -18,7 +18,9 @@
   "devDependencies": {
     "@repo/eslint-config": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "prettier": "^3.3.0",
+    "prettier": "^3.3.0"
+  },
+  "dependencies": {
     "turbo": "latest"
   },
   "packageManager": "pnpm@9.1.3",
