--- a/turbo.json
+++ b/turbo.json
@@ -4,7 +4,8 @@
   "globalEnv": [
     "NEXT_PUBLIC_VERCEL_URL",
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
-    "NODE_ENV"
+    "NODE_ENV",
+    "DATABASE_URL"
   ],
   "tasks": {
     "db:generate": {
