--- a/turbo.json
+++ b/turbo.json
@@ -4,9 +4,10 @@
   "globalEnv": [
     "NEXT_PUBLIC_VERCEL_URL",
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
-    "NODE_ENV"
+    "NODE_ENV",
+    "DATABASE_URL"
   ],
-  "pipeline": {
+  "tasks": {
     "db:generate": {
       "cache": false
     },
