--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -17,6 +17,7 @@
     "@types/node": "^20.12.12",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.2.25",
+    "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "10.4.19",
     "eslint": "^8.57.0",
     "eslint-config-next": "14.1.4",
@@ -29,6 +30,7 @@
     "@tanstack/react-table": "^8.17.3",
     "csv-parse": "^5.5.5",
     "next": "^14.2.3",
+    "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.38",
     "react": "^18.3.1",
     "react-dom": "^18.2.0",
@@ -36,6 +38,7 @@
     "react-hook-form": "^7.51.5",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
+    "swagger-ui-react": "^5.17.14",
     "tailwindcss": "3.4.4",
     "ts-luxon": "^4.6.2",
     "use-debounce": "^10.0.1",
