--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "prettier": "^3.3.3"
   },
   "dependencies": {
-    "turbo": "latest"
+    "turbo": "^2.0.11"
   },
   "packageManager": "pnpm@9.1.3",
   "engines": {
