--- a/turbo.json
+++ b/turbo.json
@@ -5,7 +5,8 @@
     "NEXT_PUBLIC_VERCEL_URL",
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
     "NODE_ENV",
-    "DATABASE_URL"
+    "DATABASE_URL",
+    "NEXT_PUBLIC_API_KEY"
   ],
   "tasks": {
     "db:generate": {
