--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -13,13 +13,14 @@
     "@repo/eslint-config": "workspace:*",
     "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/eslint": "^8.56.10",
-    "@types/node": "^20.14.13",
+    "@types/eslint": "^9.6.0",
+    "@types/luxon": "^3.4.2",
+    "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
-    "@types/react-dom": "^18.2.25",
+    "@types/react-dom": "^18.3.0",
     "@types/swagger-ui-react": "^4.18.3",
-    "autoprefixer": "10.4.19",
-    "eslint": "^8.57.0",
+    "autoprefixer": "10.4.20",
+    "eslint": "^9.8.0",
     "eslint-config-next": "14.2.5",
     "typescript": "^5.5.4"
   },
@@ -27,22 +28,22 @@
     "@prisma/client": "5.12.1",
     "@repo/board-game-geek-shared": "workspace:*",
     "@repo/tgd-database": "workspace:*",
-    "@tanstack/react-table": "^8.19.3",
-    "csv-parse": "^5.5.5",
+    "@tanstack/react-table": "^8.20.1",
+    "csv-parse": "^5.5.6",
     "next": "^14.2.5",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.38",
     "react": "^18.3.1",
-    "react-dom": "^18.2.0",
+    "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.51.5",
+    "react-hook-form": "^7.52.2",
     "react-icons": "^5.2.1",
     "react-toastify": "^10.0.5",
     "swagger-ui-react": "^5.17.14",
     "tailwindcss": "3.4.4",
     "ts-luxon": "^4.6.2",
     "use-debounce": "^10.0.2",
-    "use-sound": "^4.0.1",
+    "use-sound": "^4.0.3",
     "uuid": "^9.0.1",
     "xml-js": "^1.6.11"
   }
