--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -18,6 +18,7 @@
     "@types/node": "^22.1.0",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
+    "@types/react-toastify": "^4.1.0",
     "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "10.4.20",
     "eslint": "^9.8.0",
