feat(#158): Add Timezone latitude and longitude
- Add library to reverse lookup based on address
- Add key to env.local
- Clean up caching issues and async await
- Add new column for timezone
- Store lat / long for convention if needed later

refs: #158

--- a/turbo.json
+++ b/turbo.json
@@ -6,7 +6,9 @@
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
     "NODE_ENV",
     "DATABASE_URL",
-    "NEXT_PUBLIC_API_KEY"
+    "NEXT_PUBLIC_API_KEY",
+    "GEOAPIFY_API_URL",
+    "GEOAPIFY_API_KEY"
   ],
   "tasks": {
     "db:generate": {
