--- a/.infrastructure/docker/docker-compose.yml
+++ b/.infrastructure/docker/docker-compose.yml
@@ -29,7 +29,7 @@ services:
     ports:
       - 5432:5432
     healthcheck:
-      test: ["CMD-SHELL", "pg_isready"]
+      test: [ "CMD-SHELL", "pg_isready -d $${POSTGRES_DATABASE} -U $${POSTGRES_USER}" ]
       interval: 5s
       timeout: 20s
       retries: 10
