--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -15,7 +15,7 @@
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^9.6.0",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^20.16.1",
+    "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "@types/swagger-ui-react": "^4.18.3",
@@ -37,14 +37,14 @@
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
     "react-hook-form": "^7.52.2",
-    "react-icons": "^5.2.1",
+    "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "swagger-ui-react": "^5.17.14",
-    "tailwindcss": "3.4.9",
+    "tailwindcss": "^3.4.10",
     "ts-luxon": "^5.0.5",
-    "use-debounce": "^10.0.2",
+    "use-debounce": "^10.0.3",
     "use-sound": "^4.0.3",
-    "uuid": "^9.0.1",
+    "uuid": "^10.0.0",
     "xml-js": "^1.6.11"
   }
 }
