feat(#172): Add auth
- Add firebase as well as emulators for firebase auth
- Add authentication so the website is not open
- Ensure that users are properly created
- Add NextAuth that plugs into firebase
- Add chaining middleware for multiple auth paths

refs: #172

add nextauth

--- a/turbo.json
+++ b/turbo.json
@@ -6,6 +6,8 @@
     "NEXT_PUBLIC_VERCEL_PROTOCOL",
     "NODE_ENV",
     "DATABASE_URL",
+    "NEXTAUTH_URL",
+    "NEXTAUTH_SECRET",
     "NEXT_PUBLIC_API_KEY",
     "GEOAPIFY_API_URL",
     "GEOAPIFY_API_KEY"
