--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -11,9 +11,11 @@
   "devDependencies": {
     "@next/eslint-plugin-next": "^14.2.5",
     "@repo/eslint-config": "workspace:*",
+    "@repo/firebase": "workspace:*",
     "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
     "@types/eslint": "^9.6.0",
+    "@types/firebase": "^3.2.1",
     "@types/luxon": "^3.4.2",
     "@types/node": "^22.4.1",
     "@types/react": "^18.3.3",
@@ -30,7 +32,9 @@
     "@repo/tgd-database": "workspace:*",
     "@tanstack/react-table": "^8.20.1",
     "csv-parse": "^5.5.6",
+    "firebase": "^10.13.0",
     "next": "^14.2.5",
+    "next-auth": "^4.24.7",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.41",
     "react": "^18.3.1",
