feat(#176): Add CSV export for reported attendees
- Fix previous conventions to be proper numbers
- Fix typing for previous conventions
- Add CSV endpoint for CSV of attendees
- Add Bruno tests and migrate from insomnia
- Add authentication to export

refs: #176

--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -9,38 +9,38 @@
     "lint": "next lint"
   },
   "devDependencies": {
-    "@next/eslint-plugin-next": "^14.2.5",
+    "@next/eslint-plugin-next": "^14.2.6",
     "@repo/eslint-config": "workspace:*",
     "@repo/firebase": "workspace:*",
     "@repo/shared": "workspace:*",
     "@repo/typescript-config": "workspace:*",
-    "@types/eslint": "^9.6.0",
-    "@types/firebase": "^3.2.1",
+    "@types/eslint": "^9.6.1",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.4.1",
-    "@types/react": "^18.3.3",
+    "@types/node": "^22.5.0",
+    "@types/react": "^18.3.4",
     "@types/react-dom": "^18.3.0",
     "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "10.4.20",
-    "eslint": "^9.9.0",
-    "eslint-config-next": "14.2.5",
+    "eslint": "^9.9.1",
+    "eslint-config-next": "14.2.6",
     "typescript": "^5.5.4"
   },
   "dependencies": {
     "@prisma/client": "5.18.0",
     "@repo/board-game-geek-shared": "workspace:*",
     "@repo/tgd-database": "workspace:*",
-    "@tanstack/react-table": "^8.20.1",
+    "@tanstack/react-table": "^8.20.5",
     "csv-parse": "^5.5.6",
+    "csv-stringify": "^6.5.1",
     "firebase": "^10.13.0",
-    "next": "^14.2.5",
+    "next": "^14.2.6",
     "next-auth": "^4.24.7",
     "next-swagger-doc": "^0.4.0",
     "postcss": "8.4.41",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-dropzone": "^14.2.3",
-    "react-hook-form": "^7.52.2",
+    "react-hook-form": "^7.53.0",
     "react-icons": "^5.3.0",
     "react-toastify": "^10.0.5",
     "swagger-ui-react": "^5.17.14",
