--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -22,7 +22,7 @@
     "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "10.4.20",
     "eslint": "^9.14.0",
-    "eslint-config-next": "14.2.6",
+    "eslint-config-next": "^15.0.0",
     "typescript": "^5.6.3"
   },
   "dependencies": {
