--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -22,7 +22,7 @@
     "@types/swagger-ui-react": "^4.18.3",
     "autoprefixer": "10.4.20",
     "eslint": "^9.14.0",
-    "eslint-config-next": "^15.0.0",
+    "eslint-config-next": "^15.0.3",
     "typescript": "^5.6.3"
   },
   "dependencies": {
@@ -33,12 +33,12 @@
     "csv-parse": "^5.5.6",
     "csv-stringify": "^6.5.1",
     "firebase": "^10.13.2",
-    "next": "^15.0.0",
+    "next": "^15.0.3",
     "next-auth": "^4.24.10",
     "next-swagger-doc": "^0.4.1",
     "postcss": "8.4.47",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "19.0.0-rc-5c56b873-20241107",
+    "react-dom": "19.0.0-rc-5c56b873-20241107",
     "react-dropzone": "^14.3.5",
     "react-hook-form": "^7.53.2",
     "react-icons": "^5.3.0",
