--- a/apps/admin/package.json
+++ b/apps/admin/package.json
@@ -35,7 +35,7 @@
     "firebase": "^10.13.2",
     "next": "^15.0.3",
     "next-auth": "^4.24.10",
-    "next-swagger-doc": "^0.4.1",
+    "next-swagger-doc": "0.4.0",
     "postcss": "8.4.47",
     "react": "19.0.0-rc-5c56b873-20241107",
     "react-dom": "19.0.0-rc-5c56b873-20241107",
